--- a/_posts/2019-03-28-jekyll.md
+++ b/_posts/2019-03-28-jekyll.md
@@ -6,3 +6,10 @@ title: JeKyll 테마 적용하기
 
 Github에 수백개의 [Jekyll 테마](https://github.com/topics/jekyll-theme) 중 하나를 선택하시면 됩니다.<br>
 이 중에 저는 [so-simple-theme](https://github.com/mmistakes/so-simple-theme)로 적용해 보겠습니다.
+
+1. 해당 테마를 폴더에 복사합니다.
+```
+ ~ $ cd /Users/[user]/Desktop/gitblog3
+ ~ $ git clone 
+```
+2.
